added the user update
