# swagger.json
@@ -21,7 +21,7 @@
         "responses": {}
       }
     },
-    "api/v1/add_post": {
+    "/posts/add_post": {
       "post": {
         "description": "",
         "parameters": [],
@@ -35,7 +35,7 @@
         }
       }
     },
-    "api/v1/posts": {
+    "/posts/posts": {
       "get": {
         "description": "",
         "parameters": [],
@@ -49,7 +49,7 @@
         }
       }
     },
-    "api/v1/posts/{postId}": {
+    "/posts/posts/{postId}": {
       "get": {
         "description": "",
         "parameters": [
@@ -117,7 +117,7 @@
         }
       }
     },
-    "api/v1/posts/{postId}/comments": {
+    "/posts/posts/{postId}/comments": {
       "get": {
         "description": "",
         "parameters": [
@@ -141,7 +141,7 @@
         }
       }
     },
-    "api/v1/posts/{postId}/upvotes": {
+    "/posts/posts/{postId}/upvotes": {
       "put": {
         "description": "",
         "parameters": [
@@ -196,7 +196,7 @@
         }
       }
     },
-    "api/v1/posts/{postId}/downvotes": {
+    "/posts/posts/{postId}/downvotes": {
       "get": {
         "description": "",
         "parameters": [
@@ -220,7 +220,7 @@
         }
       }
     },
-    "api/v1/add_user": {
+    "/users/add_user": {
       "post": {
         "description": "",
         "parameters": [
@@ -230,7 +230,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "username": {
                   "example": "any"
                 },
                 "email": {
@@ -253,7 +253,7 @@
         }
       }
     },
-    "api/v1/users": {
+    "/users/users": {
       "get": {
         "description": "",
         "parameters": [],
@@ -267,7 +267,21 @@
         }
       }
     },
-    "api/v1/login": {
+    "/users/{_id}": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/users/login": {
       "post": {
         "description": "",
         "parameters": [
